5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1582_1328.log
== TEST (2019-03-26 16:37:18) 
-- CODE:
var1 = 20
var2 = 35

subtracao = var1 * var2

print(multiplicacao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(multiplicacao)
NameError: name 'multiplicacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:54) 
-- CODE:
var1 = 20
var2 = 35

multiplicacao = var1 * var2

print(multiplicacao)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:37:59) 
-- CODE:
var1 = 20
var2 = 35

multiplicacao = var1 * var2

print(multiplicacao)
-- EXECUTION TIME:
0.243602
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:14:06) 
-- CODE:
var1 = 20
var2 = 35

multiplicacao = var1 * var2

print(multiplicacao)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:14:09) 
-- CODE:
var1 = 20
var2 = 35

multiplicacao = var1 * var2

print(multiplicacao)
-- EXECUTION TIME:
0.157457
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
